# dnt

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  action.c  action.h  checksum.c  checksum.h  conf_actions.c  conf_actions.h  conf_interface.c  conf_interface.h  conf_oam.c  conf_oam.h  conf_object.c  conf_object.h  conf_packet.c  conf_packet.h  conf_streams.c  conf_streams.h  conf_utils.c  conf_utils.h  configfile.c  configfile.h  delay.c  delay.h  header.c  header.h  headerdesc.c  headerdesc.h  if_eth.c  if_eth.h  if_internal.c  if_internal.h  if_ip.c  if_ip.h  if_oam.c  if_oam.h  if_oam_cmd.c  (+68 more)
.gitlab-ci/: Dockerfile  README.md  cppize.pl  verify_yaml.pl
benchmark/: benchmark_dnt.py  benchmark_r2dtwo.py  benchmark_r2dtwo_fwdonly.py  benchmark_routing.py  mininet_tools.py  netbench_tools.py
benchmark/config/: encap-tsn-over-detnet_1hop.ini  encap-tsn_1hop.ini  encap-tsn_2hop.ini  fwd_1hop.ini  fwd_2hop.ini  repl-tsn-over-detnet_1hop.ini  repl-tsn_1hop.ini  repl-tsn_2hop.ini
doc/: config_format.md  createpdf.sh  dynconf.md  inispec.md  logging.md  notification.md  oam.md  protocolfields.pl  r2dtwo_gdb_helpers.py  srv6.md  stream_compiler.md  value_transfer.md
doc/dev/: architecture.md  dnt memory structure.mono  dnt_gdb_helpers.py  r2dtwo memory structure.mono  r2dtwo_gdb_helpers.py  style.md  value_transfer.md
doc/getting_started/: README.md
docs/design/: a.out  match.md  packet.c  packet.md  pipelie.c
dyniptest/: README.md  kea.conf  kea4.conf  kea6.conf  nb.ini  nd.ini  net.py  radvdC.conf
getting_started/: README.md
getting_started/scenario_2R-2E/: 2R-2E_topology_fig.monosketch  A.ini  B.ini  C.ini  D.ini  README.md  env.sh
getting_started/scenario_dynip/: README.md  env.sh  mobile.ini  radvd.conf  server.ini
getting_started/scenario_ip_over_detnet/: README.md  env.sh  nxp1.ini  nxp1_setup.sh  nxp2.ini  nxp2_setup.sh
getting_started/scenario_ladder/: A.ini  F.ini  README.md  env.sh
getting_started/scenario_mask/: README.md  env.sh  nxp1.ini  nxp2.ini
getting_started/scenario_notification/: README.md  edge1-automip.ini  edge1.ini  edge2-automip.ini  edge2.ini  minion-automip.ini  minion.ini  notification_demo_steps.txt  pandora-automip.ini  pandora.ini  testnet.py
getting_started/scenario_oam/: README.md  env.sh  nxp1.ini  nxp2.ini  topology_fig.monosketch
getting_started/scenario_srv6/: README.md  r2-ipv4.cfg  r2-ipv6.cfg  srv6.py
getting_started/scenario_tsn/: README.md  dnt.ini  env.sh
getting_started/scenario_tsn_over_detnet/: README.md  env.sh  nxp1.sh  nxp2.ini  nxp2.sh  traffic.py
gitlab-ci/: cppize.pl  verify_yaml.pl
inifile/: README.md  hashmap.c  hashmap.h  inifile.c  inifile.h  iniutils.h
inifile/test/: CMakeLists.txt  hashmap.c  inifile.c  testing.h
inifile/test/inisamples/: bad_keyspace.ini  good_dosendings.ini  good_empty.ini  good_nosection.ini
jslint/: jslint.c
json_receiver/: README.md  json_udp_receiver.py  multipart_json_udp_receiver.py  notification_receiver.py  test_notification_receiver.py
lib/: README.md
lib/parsers/: .gitignore  Makefile  README.md  hashmap.c  hashmap.h  inifile.c  inifile.h  json.c  json.h  parserutils.h
lib/parsers/test/: CMakeLists.txt  hashmap.c  inifile.c  json_api.c  json_read.c  json_write.c  parserutils.c  testing.h
lib/parsers/test/inisamples/: bad_nokey.ini  bad_sectionjunk.ini  bad_sectionname.ini  bad_sectionname_empty.ini  good_longline.ini  good_nonewline.ini  write_good1.ini  write_good2.ini
miki/: .editorconfig  Makefile  action.c  action.h  conf_actions.c  conf_actions.h  conf_interface.c  conf_interface.h  conf_object.c  conf_object.h  conf_packet.c  conf_packet.h  conf_streams.c  conf_streams.h  conf_utils.c  conf_utils.h  configfile.c  configfile.h  delay.c  header.c  header.h  if_eth.c  if_eth.h  interface.c  interface.h  main.c  packet.c  packet.h  parsetree.c  parsetree.h  pipeline.c  pipeline.h  protocol.c  protocol.h  seq_gen.c  seq_gen.h  seq_recov.c  seq_recov.h  transfer.h  utils.c  (+2 more)
miki/doc/: inispec.md  stream_compiler.md  value_transfer.md
miki/inifile/: hashmap.c  hashmap.h  inifile.c  inifile.h  iniutils.h
miki/quicktest/: quicknet.py  quicktest.ini
perf_tester/: README.md  perf_tester.c  perf_tester.ini
quicktest/: quickdetB.ini  quickdetC.ini  quicknet.py  quicktest.ini  radvdB.conf
r1d1/: README.md  r1d1.c  r1d1.ini
stresstest/: README.md  stress.ini  stressnet.py
test/: README.md  delay.py  delay_offload.py  mask.py  match.py  oam.py  pof.py  sequence.py  srv6.py  stress.py  utils.py
test/delay/: delay.py  delay_basic.ini  delay_offload.py  dntbr0.ini  dntbr1.ini  eth.ini  eth_missing_offload.ini  eth_wrong_prio.ini  physical_recv.ini  physical_send.ini  r2br0.ini  r2br1.ini  udp_nxp1.ini  udp_nxp1_missing_offload.ini  udp_nxp1_wrong_prio.ini
test/dependable_ue/: Makefile  README.md  env.sh  nxp1.ini  nxp1_setup.sh  nxp2.ini  nxp2_setup.sh  telnet_control.c
test/dynip/: README.md  coredhcp.yaml  net.py  radvdC.conf  radvdCnoaddr.conf
test/mask/: README.md  mask.py  mask_no_signaling.ini  mask_signaling.ini  traffic_gen.py
test/match/: match.ini  match.py
test/notification/: config_modem.sh  notification-detnet.ini  notification-detnet.py  notification.ini  notification.py  telekom.cmd
test/oam/: oam.py  oam_basic.ini  oam_basic6.ini  oam_nxp.ini  oam_nxp6.ini  oam_tsn_basic.ini  setup_simple.sh
test/oam_srv6/: oam_srv6.py
test/oam_tsn/: oam_tsn.py
test/pof/: dntbr1.ini  dntbr1_nopof.ini  dntbr1_smallbuf.ini  pof.py  r2br1.ini  r2br1_nopof.ini  r2br1_smallbuf.ini
test/quick/: README.md  quickdetB.ini  (+4 more)
unit_test/: CMakeLists.txt  README.md  gen_conf_utils_dat.pl  gen_header_compare_dat.pl  gen_header_write_dat.pl  test_conf_utils.c  test_delay.c  test_header_api.c  test_header_compare.c  test_header_read.c  test_header_write.c  test_if_utils.c  test_inet_utils.c  test_json_api.c  test_json_read.c  test_json_write.c  test_packet.c  test_seq_gen.c  test_seq_rcvy_match.c  test_seq_rcvy_oam.c  test_seq_rcvy_seamless.c  test_seq_rcvy_vector.c  test_thread.c  test_time.c  test_utils.c  testing.h
(+163 files in other folders)
